--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "What am I about?",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.15.2",
